# nereus

./: .gitignore  LICENSE  MANIFEST.in  README.md  calc_cross_section.py  calc_kinematics.py  calc_los.py  calc_spectrum.py  constants.py  cross_section_tables.py  cross_sections.py  dicxml.py  dixm.py  los.py  nereus.py  neut_reac.py  plot_rekin.py  plots.py  pyproject.toml  pyrekin.py  reactions.py  reactivities.py  rel_kin.py  response.py  setup.cfg
crossSections/: D(T,n)4He.json
dress_client/: nspectrum.py  nspectrum.py~
dress_client/input/: aug29783-6.15eq.cdf
los/: los.py
nereus/: __init__.py  constants.py  nereus.py  nereus_gui.py  reactions.py  response.py
nereus/crossSections/: D(3He,P)4He.json  alphat.json
nereus/dress_client/: nspectrum.py
nereus/nresp/: crossSections.py  nresp.py
nereus/responses/: neut_fit.txt  rm.cdf  simresp.rsp
nresp/: crossSections.py  en2light.py  nresp.py  nucleiMassMeV.json  response.py  rw_for.py  settings.py
nresp/cross-sections/: 12C(N,D)11B.json  12C(N,N')12C*.json  12C(N,N)12C.json  27AL(N,N')27AL'.json  AlTot.json  crossSections.json
nresp/inc/: nucleiMassMeV.json  poly_yield.json
pynereus/: __init__.py  calc_cross_section.py  nereus_gui.py  plots.py  reactions.py  reactivities.py  response.py
pynereus/crossSections/: D(D,n)3He.json  D3He.json  DP.json  alphad.json
pynereus/dress_client/: fi_codes.py  nspectrum.py
pynereus/nresp/: en2light.py  nresp.py
pynereus/settings/: default.json
responses/: rm_bg.cdf  rm_gb.cdf
settings/: ciao.json  default.json
xml/: default.xml  test.xml
(+12 files in other folders)
