[metadata]
name = nereus
version = attr: nereus.__version__
author = Giovanni Tardini
author_email = giovannitardini@yahoo.de
description = Package to calculate neutron reactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tardini/nereus.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=2.6

[options.packages.find]
where = .
